Developing v0.9

* Lazy loading of entire pages
* Licensed changed
 - Additional terms for usage in online services
 - Remove GPLv2
* New options:
 --embed
 --embed-***
* Deprecated/Removed options:
 --single-html
 --remove-unused-glyph

v0.8
2013.05.05

* HTML optimization 
 - reduce number of <span> elements
 - merge lines with different y values 
 - merge lines with differnt (but proportional) transform matrices
* Custom format for page file name [Ryan Morlok]
* Workaround for NBSP
* A default HTML file which load the pages dynamically when split-pages is on
* Support simple clippings
* Bug fixed:
 -missing glyphs in TTF fonts
 - unexpected vertical shifts
 - whitespace lost in IE
* New UI style 
* New options:
 --optimize-text : HTML optimization, see above
 --fallback : the most accurate way, but costy (larger file sizes)
 --printing : enable or disable CSS for printing
 --page-file: specify page filenames when split-pages is on
* Deprecated options:
 --embed-base-font 
* New default values:
 --embed-external-font 1
 --space-as-offset 0
 --remove-unused-glyph 0

v0.7
2013.03.01

* Process outline
* Fix build with poppler
* Many code cleaning jobs [John Hewson]
* Experimental printing support
* Lots of code refinements

v0.6
2013.01.26

* new option --no-drm [John Hewson]
* Travis CI integration [John Hewson]
* Add a class for 'left'
* Fixed a bug of hashing/finding GfxRGB
* new option -v, --version [John Hewson]
* Render Type 3 fonts as image
* New parameter: --use-cropbox
* Progress indicator
* Create a glyph for ' ' when missing
* Code refining

v0.5
2012.10.06

* New option: --remove-unused-glyph
* New options: --stretch-narrow-glyph, --squeeze-wide-glyph
* Fixed glyph width adjusting 
* Fixed a memory issue
* Working on css-draw
* Working on integrating background-renderer, preparing for svg renderer in
the future

v0.4
2012.09.26

* Precise link destination within the document
* Better appearance
* UI events/actions with Javascript
* external hint tool